<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".SQLiteExample.EditContactEntery">


    <EditText
        android:id="@+id/editfirstname"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="75dp"
        android:ems="10"
        android:hint="@string/firstname"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:textColor="@color/black"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editsecondname"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@id/editfirstname"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="76dp"
        android:hint="@string/second_name"
        android:importantForAutofill="no"
        android:textSize="20sp"
        android:textColor="@color/black"
        tools:ignore="TextContrastCheck"/>

    <EditText
        android:id="@+id/editphonenumber"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/editsecondname"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="78dp"
        android:inputType="number|textPersonName"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:textSize="20sp"
        android:textColor="@color/black"
        tools:ignore="TextContrastCheck"
        />

    <EditText
        android:id="@+id/editemail"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/editphonenumber"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="81dp"
        android:inputType="textWebEmailAddress|textPersonName|textEmailSubject"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:textSize="20sp"
        android:textColor="@color/black"
        tools:ignore="TextContrastCheck"
        />

    <EditText
        android:id="@+id/edithomeaddress"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/editemail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="78dp"
        android:inputType="textPersonName"
        android:hint="@string/address"
        android:importantForAutofill="no"
        android:textSize="20sp"
        android:textColor="@color/black"
        tools:ignore="TextContrastCheck"
        />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_below="@id/edithomeaddress"
        android:onClick="updatedata"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="198dp"
        android:layout_marginBottom="16dp"
        android:text="@string/update" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_below="@id/edithomeaddress"
        android:onClick="deletedata"
        android:layout_alignBottom="@+id/button9"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="215dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="4dp"
        android:layout_toEndOf="@id/button9"
        android:text="@string/delete" />

</RelativeLayout>