<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".SQLiteExample.NewContactActivity">


    <EditText
        android:id="@+id/edtfirstname"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="75dp"
        android:hint="@string/firstname"
        android:importantForAutofill="no"
        android:textSize="20sp"
        android:textColor="@color/black"
        tools:ignore="TextContrastCheck"/>

    <EditText
        android:id="@+id/edtsecondname"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@id/edtfirstname"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="76dp"
        android:hint="@string/second_name"
        android:importantForAutofill="no"
        android:textSize="20sp"
        android:textColor="@color/black"
        tools:ignore="TextContrastCheck"/>

    <EditText
        android:id="@+id/edtphonenumber"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/edtsecondname"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="78dp"
        android:inputType="number|textPersonName"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:textSize="20sp"
        android:textColor="@color/black"
        tools:ignore="TextContrastCheck"
        />

    <EditText
        android:id="@+id/edtemail"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/edtphonenumber"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="81dp"
        android:inputType="textWebEmailAddress|textPersonName|textEmailSubject"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:textSize="20sp"
        android:textColor="@color/black"
        tools:ignore="TextContrastCheck"
        />

    <EditText
        android:id="@+id/edthomeaddress"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/edtemail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="78dp"
        android:inputType="textPersonName"
        android:hint="@string/address"
        android:importantForAutofill="no"
        android:textSize="20sp"
        android:textColor="@color/black"
        tools:ignore="TextContrastCheck"
        />

    <Button
        android:id="@+id/btnsave"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_below="@id/edthomeaddress"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="113dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="87dp"
        android:text="@string/save_to_sql" />

</RelativeLayout>