<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtmobilename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/mobile_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtcompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company"
        app:layout_constraintBottom_toBottomOf="@+id/txtmobilename"
        app:layout_constraintEnd_toStartOf="@+id/txtprice"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toEndOf="@+id/txtmobilename"
        app:layout_constraintTop_toTopOf="@+id/txtmobilename"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtmobilename"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtmobilename" />
</androidx.constraintlayout.widget.ConstraintLayout>